--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1599,9 +1599,17 @@ margin-bottom: 50px;
   }
  }
 
+ .footerBanner {
+  display: flex;
+ }
+
  @media only screen and (min-device-width: 375px) and (max-device-width: 800px) {
   .cart-section {
     margin-top: 10em;
+  }
+   
+    .footerBanner {
+    flex-direction: column;
   }
  }
 
