--- a/styles/globals.css
+++ b/styles/globals.css
@@ -861,7 +861,7 @@ nav{
 
 .sm-banner .banner-box {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
   justify-content: center;
   align-items: flex-start;
   background: url(../public/banner/b17.jpg);
