--- a/styles/globals.css
+++ b/styles/globals.css
@@ -300,6 +300,7 @@ nav{
 .product-con {
   display: flex;
   flex-direction: row;
+  margin: .8em;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
